IngressService/default-backend.yaml
kind: Service
apiVersion: v1
metadata:
  name: default-http-backend
  namespace: default
spec:
  selector:
    app: default-http-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
