IngressService/external.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: default
spec:
  type: ExternalName
  externalName: grafana.monitoring.svc.cluster.local
  ports:
  - port: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: default
spec:
  type: ExternalName
  externalName: kibana.monitoring.svc.cluster.local
  ports:
  - port: 5601

---

apiVersion: v1
kind: Service
metadata:
  name: flask-site
  namespace: default
spec:
  type: ExternalName
  externalName: flask-site.aproject.svc.cluster.local
  ports:
  - port: 5000
